--- a/winnerlights-ios-mobile-client/Info.plist
+++ b/winnerlights-ios-mobile-client/Info.plist
@@ -41,10 +41,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Please allow to use Bluetooth</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
